2009-04-13  Eric Belanger  <eric@archlinux.org>

	* fontforge 20090408-1
	* Upstream update

2009-02-27  Eric Belanger  <eric@archlinux.org>

	* fontforge 20090224-1
	* Upstream update

2008-12-29  Eric Belanger  <eric@archlinux.org>

	* fontforge 20081224-1
	* Upstream update

2008-11-16  Eric Belanger  <eric@archlinux.org>

	* fontforge 20081115-1
	* Upstream update

2008-11-14  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080927-1
	* Upstream update

2008-08-28  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080828-1
	* Upstream update

2008-07-20  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080720-1
	* Upstream update

2008-06-13  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080607-1
	* Upstream update

2008-05-09  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080429-1
	* Upstream update

2008-03-31  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080330-1
	* Upstream update

2008-03-01  Eric Belanger  <eric@archlinux.org>

	* fontforge 20080203-1
	* Upstream update
	* Fixed license: custom -> BSD
	* Disabled SMP build
	* Added freetype2 makedepends
	* FSH man pages